ionic bond update

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Chemistry</title>
 </head>
 <body>
-Hello World
+	<img src="periodictable.jpg">
+Types of Bonds
+Ionic Bond
+Bonds formed by ions
+
 </body>
 </html>
