--- a/index.html
+++ b/index.html
@@ -2,8 +2,30 @@
 <html>
 <head>
 	<title>Chemistry</title>
+	<link rel="stylesheet" href="style.css">
+	<!-- 
+HEX: #f0f0f0 grayish white
+
+HEX: #c5d5c5 mint green
+
+HEX: #9fa9a3 pale olive
+
+HEX: #e3e0cc sand
+ -->
 </head>
 <body>
+	<h1 id="Chemistry">
+		CHEMISTRY
+	</h1>
+	<nav>
+		<a id="navbar" href="#.html">Atomic structure and properties</a>
+		<a id="navbar" href="#.html">Molecular and ionic compound structure and properties</a>
+		<a id="navbar" href="#.html">Intermolecular forces and properties</a>
+		<a id="navbar" href="#.html">Chemical reactions</a>
+		<a id="navbar" href="#.html">Kinetics</a>
+		<a id="navbar" href="#.html">Thermodynamics</a>
+		<a id="navbar" href="#.html">Equilibrium</a>
+	</nav>
 	<center>
 		<img src="periodictable.jpg" width="50%">
 	</center>
