footer style changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@ HEX: #e3e0cc sand
 	</center>
 	<div>
 		<footer>
-			Made by<br><b><font size="15px" style="color: white; text-shadow: 3px 3px 3px #9fa9a3;">Gianna Saludo</font></b>
+			<center>
+			Made by<br><b><font size="15px" style="color: white; text-shadow: 3px 3px 3px #9fa9a3;"><a id="gitlink" href="https://github.com/giannacrisha">Gianna Saludo</a></font></b>
+			</center>
 		</footer>
 	</div>
 </body>
