--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@ HEX: #e3e0cc sand
  -->
 </head>
 <body>
-	<h1 id="Chemistry">
+	<a href="index.html"><h1 id="Chemistry">
 		CHEMISTRY
-	</h1>
+	</h1></a>
 	<nav>
-		<a id="navbar" href="#.html">Atomic structure and properties</a>
-		<a id="navbar" href="#.html">Molecular and ionic compound structure and properties</a>
-		<a id="navbar" href="#.html">Intermolecular forces and properties</a>
-		<a id="navbar" href="#.html">Chemical reactions</a>
-		<a id="navbar" href="#.html">Kinetics</a>
-		<a id="navbar" href="#.html">Thermodynamics</a>
-		<a id="navbar" href="#.html">Equilibrium</a>
+		<a class="navbar" href="asp.html">Atomic structure and properties</a>
+		<a class="navbar" href="micsp.html">Molecular and ionic compound structure and properties</a>
+		<a class="navbar" href="ifp.html">Intermolecular forces and properties</a>
+		<a class="navbar" href="reactions.html">Chemical reactions</a>
+		<a class="navbar" href="kinetics.html">Kinetics</a>
+		<a class="navbar" href="thermo.html">Thermodynamics</a>
+		<a class="navbar" href="equi.html">Equilibrium</a>
 	</nav>
 	<center>
 		<img src="periodictable.jpg" width="100%">
@@ -32,7 +32,7 @@ HEX: #e3e0cc sand
 	<div>
 		<footer>
 			<center>
-			Made by<br><b><font size="15px" style="color: white; text-shadow: 3px 3px 3px #9fa9a3;"><a id="gitlink" href="https://github.com/giannacrisha">Gianna Saludo</a></font></b>
+				Made by<br><a id="gitlink" href="https://github.com/giannacrisha">Gianna Saludo</a>
 			</center>
 		</footer>
 	</div>
