--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ HEX: #e3e0cc sand
 <body>
 	<a href="index.html"><h1 id="Chemistry">
 		CHEMISTRY
-	</h1></a>
+	</h1></a><br>
 	<nav>
 		<a class="navbar" href="asp.html">Atomic structure and properties</a>
 		<a class="navbar" href="micsp.html">Molecular and ionic compound structure and properties</a>
@@ -26,14 +26,14 @@ HEX: #e3e0cc sand
 		<a class="navbar" href="thermo.html">Thermodynamics</a>
 		<a class="navbar" href="equi.html">Equilibrium</a>
 	</nav>
+	<div>
 	<center>
-		<img src="periodictable.jpg" width="100%">
+		<img src="periodictable.jpg" width="50%">
 	</center>
+	</div>
 	<div>
 		<footer>
-			<center>
 				Made by<br><a id="gitlink" href="https://github.com/giannacrisha">Gianna Saludo</a>
-			</center>
 		</footer>
 	</div>
 </body>
