--- a/index.html
+++ b/index.html
@@ -18,23 +18,28 @@ HEX: #e3e0cc sand
 		CHEMISTRY
 	</h1></a><br>
 	<nav>
-		<a class="navbar" href="asp.html">Atomic structure and properties</a>
-		<a class="navbar" href="micsp.html">Molecular and ionic compound structure and properties</a>
-		<a class="navbar" href="ifp.html">Intermolecular forces and properties</a>
-		<a class="navbar" href="reactions.html">Chemical reactions</a>
-		<a class="navbar" href="kinetics.html">Kinetics</a>
-		<a class="navbar" href="thermo.html">Thermodynamics</a>
-		<a class="navbar" href="equi.html">Equilibrium</a>
+		<a href="asp.html">Atomic structure and properties</a>
+		<a href="micsp.html">Molecular and ionic compound structure and properties</a>
+		<a href="ifp.html">Intermolecular forces and properties</a>
+		<a href="reactions.html">Chemical reactions</a>
+		<a href="kinetics.html">Kinetics</a>
+		<a href="thermo.html">Thermodynamics</a>
+		<a href="equi.html">Equilibrium</a>
 	</nav>
 	<div>
 	<center>
-		<img src="periodictable.jpg" width="50%">
+		<br><br>
+		<img src="periodictable.jpg" id="periodictable" width="60%">
+		<img src="trends.jpg" id="periodictable" width="60%">
+		<br><br>
 	</center>
 	</div>
 	<div>
-		<footer>
-				Made by<br><a id="gitlink" href="https://github.com/giannacrisha">Gianna Saludo</a>
-		</footer>
+		<center>
+			<footer>
+					Made by<br><a id="gitlink" href="https://github.com/giannacrisha">Gianna Saludo</a>
+			</footer>
+		<center>
 	</div>
 </body>
 </html>
