--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@ HEX: #e3e0cc sand
  -->
 </head>
 <body>
-	<a href="index.html"><h1 id="Chemistry">
-		CHEMISTRY
-	</h1></a><br>
+		<a href="index.html"><img id="logo" src="logo.png"></a>
+		<a href="index.html"><h1 id="chemistry">CHEMISTRY</h1></a>
+			<h4 id="devname">Made By <a href="https://github.com/giannacrisha" id="devlink">GIANNA</a><h4>
+	
 	<nav>
-		<a href="asp.html">Atomic structure and properties</a>
-		<a href="micsp.html">Molecular and ionic compound structure and properties</a>
-		<a href="ifp.html">Intermolecular forces and properties</a>
-		<a href="reactions.html">Chemical reactions</a>
-		<a href="kinetics.html">Kinetics</a>
-		<a href="thermo.html">Thermodynamics</a>
-		<a href="equi.html">Equilibrium</a>
+		<a href="index.html">Home</a>
+		<a href="directory.html">Directory</a>
+		<a href="introchem.html">Introductory Chemistry</a>
+		<a href="genchem.html">General Chemistry</a>
+		<a href="ochem.html">Organic Chemistry</a>
+		<a href="inochem.html">Inorganic Chemistry</a>
+		<a href="achem.html">Analytical Chemistry</a>
+		<a href="biochem.html">Biochemistry</a>
+		<a href="resources.html">Resources</a>
 	</nav>
 	<div>
 	<center>
