--- a/index.html
+++ b/index.html
@@ -14,12 +14,8 @@ HEX: #e3e0cc sand
  -->
 </head>
 <body>
-		<a href="index.html"><img id="logo" src="logo.png"></a>
-		<a href="index.html"><h1 id="chemistry">CHEMISTRY</h1></a>
-			<h4 id="devname">Made By <a href="https://github.com/giannacrisha" id="devlink">GIANNA</a><h4>
-	
 	<nav>
-		<a href="index.html">Home</a>
+		<a class="active" href="index.html">Home</a>
 		<a href="directory.html">Directory</a>
 		<a href="introchem.html">Introductory Chemistry</a>
 		<a href="genchem.html">General Chemistry</a>
@@ -29,6 +25,17 @@ HEX: #e3e0cc sand
 		<a href="biochem.html">Biochemistry</a>
 		<a href="resources.html">Resources</a>
 	</nav>
+	<div>
+		<a href="index.html"><img id="logo" src="logos/logo.png"></a>
+		<a href="index.html"><h1 id="chemistry">CHEMISTRY</h1></a>
+		<h4 id="devname">Made by <a href="https://github.com/giannacrisha" id="devlink">GIANNA</a></h4><br>
+		<h4 id="socmed">
+			<a id="twitter" href="https://twitter.com/devilainess"><img src="logos/twitter.png"></a>
+			<a id="github" href="https://github.com/giannacrisha"><img src="logos/github.png"></a>
+			<a id="fb" href="https://facebook.com/giannacrisha"><img src="logos/fb.png"></a>
+		</h4>
+	</div>
+	<br>
 	<div>
 	<center>
 		<br><br>
