--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ HEX: #e3e0cc sand
 	<div>
 		<center>
 			<footer>
-					Made by<br><a id="gitlink" href="https://github.com/giannacrisha">Gianna Saludo</a>
+					Copyright &copy; 2021 by Gianna Saludo
 			</footer>
 		<center>
 	</div>
