--- a/genchem.html
+++ b/genchem.html
@@ -83,7 +83,9 @@ HEX: #e3e0cc sand
 	</div>
 <br>
 	<center>
-		<footer>Copyright &copy; 2021 by Gianna Saludo</footer>
+		<footer>
+			Copyright &copy; 2021 by <a href="https://github.com/giannacrisha" id="gitlink">Gianna Saludo</a>
+		</footer>
 	<center>
 </body>
 </html>
