--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ HEX: #e3e0cc sand
 	<div>
 		<center>
 			<footer>
-					Copyright &copy; 2021 by Gianna Saludo
+					Copyright &copy; 2021 by <a href="https://github.com/giannacrisha" id="gitlink">Gianna Saludo</a>
 			</footer>
 		<center>
 	</div>
