periodic table update

--- a/genchem.html
+++ b/genchem.html
@@ -56,7 +56,7 @@ HEX: #e3e0cc sand
 			<h3>Step six:</h3><p>Write the elements beside each other, and you're done!<p>
 		</div>
 		<div class="column">
-			<h2 id="empirical">Molecular Formula</h2>
+			<h2 id="molecular">Molecular Formula</h2>
 			<h3>Step one:</h3><p>Multiply the subscript of the elements by their molar masses.</p>
 			<h3>Step two:</h3><p>Add the products.</p>
 			<h3>Step three:</h3><p> Divide the molar mass of the compound by the sum of the products. </p>
@@ -65,16 +65,36 @@ HEX: #e3e0cc sand
 	</div>
 	<div class="back1 row">
 		<div class="column">
-			<h2 id="empirical">Empirical Formula</h2>
-			<h3>Step one:</h3><p> Convert percent composition to grams.</p>
-			<h3>Step two:</h3><p> Multiply the quantities of the elements (in grams)<br> by their molar masses (in moles per grams).</p>
+			<h2 id="theoretical">Limiting Reactant</h2>
+			<p>The limiting reactant has the smallest moles of an element per<br> coefficent of an element.</p>
+			<h3>Step one:</h3><p> Find the limiting reactant and the excess reactant.</p>
+			<h3>Step two:</h3><p>Multiply the moles of an element to </p>
 			<h3>Step three:</h3><p> Divide the products (in moles) by the smallest molar mass. </p>
 			<h3>Step four:</h3><p> Round the products (in moles) to the nearest whole number. </p>
 			<h3>Step five:</h3><p> Substitute the whole number as the subscript of each element. </p>
-			<h3>Step six:</h3><p>Write the elements beside each other, and you're done!<p>
+			<h3>Step six:</h3><p>Write the elements beside each other, and you're done!</p>
 		</div>
 		<div class="column">
-			<h2 id="empirical">Molecular Formula</h2>
+			<h2 id="percent">Excess Reactant</h2>
+			<p>The excess reactant has the largest moles of an element per<br> coefficent of an element.</p>
+			<h3>Step one:</h3><p>Multiply the subscript of the elements by their molar masses.</p>
+			<h3>Step two:</h3><p>Add the products.</p>
+			<h3>Step three:</h3><p> Divide the molar mass of the compound by the sum of the products. </p>
+			<h3>Step four:</h3><p>Multiply the subscript of the elements by the quotient, and you're done!</p>
+		</div>
+	</div>
+	<div class="back2 row">
+		<div class="column">
+			<h2 id="theoretical">Theoretical Yield</h2>
+			<h3>Step one:</h3><p>Make sure that the equation is balanced.</p>
+			<h3>Step two:</h3><p>Identify the limiting reactant and the excess reactant.</p>
+			<h3>Step three:</h3><p>Convert the moles of the limiting reactant to the moles of the product by multiplying the moles of the limiting reactant by the ratio of the coefficient of the limiting reactant and the coefficient of the product.</p>
+			<h3>Step four:</h3><p> Round the products (in moles) to the nearest whole number. </p>
+			<h3>Step five:</h3><p> Substitute the whole number as the subscript of each element. </p>
+			<h3>Step six:</h3><p>Write the elements beside each other, and you're done!</p>
+		</div>
+		<div class="column">
+			<h2 id="percent">Percent Yield</h2>
 			<h3>Step one:</h3><p>Multiply the subscript of the elements by their molar masses.</p>
 			<h3>Step two:</h3><p>Add the products.</p>
 			<h3>Step three:</h3><p> Divide the molar mass of the compound by the sum of the products. </p>
