--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
 <head>
 	<title>Chemistry</title>
 	<link rel="stylesheet" href="style.css">
+	<script type="text/javascript">
+		function appearLanthanide() {
+			var x = document.getElementById("lanthanide");
+			if (x.style.display === "block") {
+				x.style.display = "none";
+			} else {
+				x.style.display = "block";
+			}
+		}
+
+		function appearActinide() {
+			var x = document.getElementById("actinide");
+			if (x.style.display === "block") {
+				x.style.display = "none";
+			} else {
+				x.style.display = "block";
+			}
+		}
+	</script>
 	<!-- 
 HEX: #f0f0f0 grayish white
 
@@ -35,19 +54,195 @@ HEX: #e3e0cc sand
 			<a id="fb" href="https://facebook.com/giannacrisha"><img src="logos/fb.png"></a>
 		</h4>
 	</div>
-	<br>
-	<div>
+	<br><br><br>
 	<center>
-		<br><br>
-		<img src="periodictable.jpg" id="periodictable" width="60%">
-		<img src="trends.jpg" id="periodictable" width="60%">
-		<br><br>
-	</center>
-	</div>
+		<table border="0px" cellspacing="0px" cellpadding="20px" width="80%">
+		<!-- FIRST PERIOD -->
+		<th class="nonmetals" id="h">H</th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th class="noblegases" id="he">He</th>
+		<!-- SECOND PERIOD -->
+		<tr>
+		<th class="alkalimetals" id="li">Li</th>
+		<th class="alkalinearths" id="be">Be</th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th class="metalloids" id="b">B</th>
+		<th class="nonmetals" id="c">C</th>
+		<th class="nonmetals" id="n">N</th>
+		<th class="nonmetals" id="o">O</th>
+		<th class="halogens" id="f">F</th>
+		<th class="noblegases" id="ne">Ne</th>
+		</tr>
+		<!-- THIRD PERIOD -->
+		<tr>
+		<th class="alkalimetals" id="na">Na</th>
+		<th class="alkalinearths" id="mg">Mg</th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th class="basicmetals" id="al">Al</th>
+		<th class="metalloids" id="si">Si</th>
+		<th class="nonmetals" id="p">P</th>
+		<th class="nonmetals" id="s">S</th>
+		<th class="halogens" id="cl">Cl</th>
+		<th class="noblegases" id="ar">Ar</th>
+		</tr>
+		<!-- FOURTH PERIOD -->
+		<tr>
+		<th class="alkalimetals" id="k">K</th>
+		<th class="alkalinearths" id="ca">Ca</th>
+		<th class="transitionmetals" id="al">Sc</th>
+		<th class="transitionmetals" id="al">Ti</th>
+		<th class="transitionmetals" id="al">V</th>
+		<th class="transitionmetals" id="al">Cr</th>
+		<th class="transitionmetals" id="al">Mn</th>
+		<th class="transitionmetals" id="al">Fe</th>
+		<th class="transitionmetals" id="al">Co</th>
+		<th class="transitionmetals" id="al">Ni</th>
+		<th class="transitionmetals" id="al">Cu</th>
+		<th class="transitionmetals" id="al">Zn</th>
+		<th class="basicmetals" id="al">Ga</th>
+		<th class="metalloids" id="ge">Ge</th>
+		<th class="metalloids" id="as">As</th>
+		<th class="nonmetals" id="se">Se</th>
+		<th class="halogens" id="br">Br</th>
+		<th class="noblegases" id="kr">Kr</th>
+		</tr>
+		<!-- FIFTH PERIOD -->
+		<tr>
+		<th class="alkalimetals" id="rb">Rb</th>
+		<th class="alkalinearths" id="sr">Sr</th>
+		<th class="transitionmetals" id="al">Y</th>
+		<th class="transitionmetals" id="al">Zr</th>
+		<th class="transitionmetals" id="al">Nb</th>
+		<th class="transitionmetals" id="al">Mo</th>
+		<th class="transitionmetals" id="al">Tc</th>
+		<th class="transitionmetals" id="al">Ru</th>
+		<th class="transitionmetals" id="al">Rh</th>
+		<th class="transitionmetals" id="al">Pd</th>
+		<th class="transitionmetals" id="al">Ag</th>
+		<th class="transitionmetals" id="al">Cd</th>
+		<th class="basicmetals" id="al">In</th>
+		<th class="basicmetals" id="al">Sn</th>
+		<th class="metalloids" id="sb">Sb</th>
+		<th class="metalloids" id="te">Te</th>
+		<th class="halogens" id="i">I</th>
+		<th class="noblegases" id="xe">Xe</th>
+		</tr>
+		<!-- SIXTH PERIOD -->
+		<tr>
+		<th class="alkalimetals" id="cs">Cs</th>
+		<th class="alkalinearths" id="ba">Ba</th>
+		<th bgcolor="#BCC8A9"><button onclick="appearLanthanide()"><label>L</label></button></th>
+		<th class="transitionmetals" id="al">Hf</th>
+		<th class="transitionmetals" id="al">Ta</th>
+		<th class="transitionmetals" id="al">W</th>
+		<th class="transitionmetals" id="al">Re</th>
+		<th class="transitionmetals" id="al">Os</th>
+		<th class="transitionmetals" id="al">Ir</th>
+		<th class="transitionmetals" id="al">Pt</th>
+		<th class="transitionmetals" id="al">Au</th>
+		<th class="transitionmetals" id="al">Hg</th>
+		<th class="basicmetals" id="al">Tl</th>
+		<th class="basicmetals" id="al">Pb</th>
+		<th class="basicmetals" id="al">Bi</th>
+		<th class="metalloids" id="po">Po</th>
+		<th class="halogens" id="at">At</th>
+		<th class="noblegases" id="rn">Rn</th>
+		</tr>
+		<!-- SEVENTH PERIOD -->
+		<tr>
+		<th class="alkalimetals" id="fr">Fr</th>
+		<th class="alkalinearths" id="be">Ra</th>
+		<th bgcolor="#E6F1D4"><button onclick="appearActinide()"><label>A</label></button></th>
+		<th class="transitionmetals" id="al">Rf</th>
+		<th class="transitionmetals" id="al">Db</th>
+		<th class="transitionmetals" id="al">Sg</th>
+		<th class="transitionmetals" id="al">Bh</th>
+		<th class="transitionmetals" id="al">Hs</th>
+		<th class="transitionmetals" id="al">Mt</th>
+		<th class="transitionmetals" id="al">Ds</th>
+		<th class="transitionmetals" id="al">Rg</th>
+		<th class="transitionmetals" id="al">Cn</th>
+		<th class="basicmetals" id="al">Uut</th>
+		<th class="basicmetals" id="al">Fl</th>
+		<th class="basicmetals" id="al">Uup</th>
+		<th class="basicmetals" id="al">Lv</th>
+		<th class="halogens" id="uus">Uus</th>
+		<th class="noblegases" id="uuo">Uuo</th>
+		</tr>
+	</table>
+		<!-- LANTHANIDES AND ACTINIDES -->
+		<div id="lanthanide"><table class="lanthanides" border="0px" cellspacing="0px" cellpadding="20px" width="65%">
+			<th id="la">La</th>
+			<th id="ce">Ce</th>
+			<th id="pr">Pr</th>
+			<th id="nd">Nd</th>
+			<th id="pm">Pm</th>
+			<th id="sm">Sm</th>
+			<th id="eu">Eu</th>
+			<th id="gd">Gd</th>
+			<th id="tb">Tb</th>
+			<th id="dy">Dy</th>
+			<th id="ho">Ho</th>
+			<th id="er">Er</th>
+			<th id="tm">Tm</th>
+			<th id="yb">Yb</th>
+			<th id="lu">Lu</th>
+		</table></div>
+		<div id="actinide"><table class="actinides" border="0px" cellspacing="0px" cellpadding="20px" width="65%">
+			<th>Ac</th>
+			<th>Th</th>
+			<th>Pa</th>
+			<th>U</th>
+			<th>Np</th>
+			<th>Pu</th>
+			<th>Am</th>
+			<th>Cm</th>
+			<th>Bk</th>
+			<th>Cf</th>
+			<th>Es</th>
+			<th>Fm</th>
+			<th>Md</th>
+			<th>No</th>
+			<th>Lr</th>
+		</table></div>
+	</center><br>
 	<div>
 		<center>
 			<footer>
-					Copyright &copy; 2021 by <a href="https://github.com/giannacrisha" id="gitlink">Gianna Saludo</a>
+				Copyright &copy; 2021 by <a href="https://github.com/giannacrisha" id="gitlink">Gianna Saludo</a>
 			</footer>
 		<center>
 	</div>
