periodic table changes

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@ HEX: #e3e0cc sand
 	</div>
 	<br><br><br>
 	<center>
-		<table border="0px" cellspacing="0px" cellpadding="20px" width="80%">
+		<table cellspacing="0px" cellpadding="20px" width="80%">
 		<!-- FIRST PERIOD -->
-		<th class="nonmetals" id="h">H</th>
+		<th class="nonmetals" id="h" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">H</th>
 		<th></th>
 		<th></th>
 		<th></th>
@@ -75,11 +75,11 @@ HEX: #e3e0cc sand
 		<th></th>
 		<th></th>
 		<th></th>
-		<th class="noblegases" id="he">He</th>
+		<th class="noblegases" id="he" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">He</th>
 		<!-- SECOND PERIOD -->
 		<tr>
 		<th class="alkalimetals" id="li">Li</th>
-		<th class="alkalinearths" id="be">Be</th>
+		<th class="alkalinearths" id="be" style="border-top-right-radius: 10px;">Be</th>
 		<th></th>
 		<th></th>
 		<th></th>
@@ -90,7 +90,7 @@ HEX: #e3e0cc sand
 		<th></th>
 		<th></th>
 		<th></th>
-		<th class="metalloids" id="b">B</th>
+		<th class="metalloids" id="b" style="border-top-left-radius: 10px;">B</th>
 		<th class="nonmetals" id="c">C</th>
 		<th class="nonmetals" id="n">N</th>
 		<th class="nonmetals" id="o">O</th>
@@ -183,7 +183,7 @@ HEX: #e3e0cc sand
 		</tr>
 		<!-- SEVENTH PERIOD -->
 		<tr>
-		<th class="alkalimetals" id="fr">Fr</th>
+		<th class="alkalimetals" id="fr" style="border-bottom-left-radius: 10px;">Fr</th>
 		<th class="alkalinearths" id="be">Ra</th>
 		<th bgcolor="#E6F1D4"><button onclick="appearActinide()"><label>A</label></button></th>
 		<th class="transitionmetals" id="al">Rf</th>
@@ -200,7 +200,7 @@ HEX: #e3e0cc sand
 		<th class="basicmetals" id="al">Uup</th>
 		<th class="basicmetals" id="al">Lv</th>
 		<th class="halogens" id="uus">Uus</th>
-		<th class="noblegases" id="uuo">Uuo</th>
+		<th class="noblegases" id="uuo" style="border-bottom-right-radius: 10px;">Uuo</th>
 		</tr>
 	</table>
 		<!-- LANTHANIDES AND ACTINIDES -->
