--- a/index.html
+++ b/index.html
@@ -56,40 +56,40 @@ HEX: #e3e0cc sand
 	</div>
 	<br><br><br>
 	<center>
-		<table cellspacing="0px" cellpadding="20px" width="80%">
+		<table cellspacing="0px" cellpadding="25px" width="90%">
 		<!-- FIRST PERIOD -->
 		<th class="nonmetals" id="h" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">H</th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
 		<th class="noblegases" id="he" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">He</th>
 		<!-- SECOND PERIOD -->
 		<tr>
 		<th class="alkalimetals" id="li">Li</th>
 		<th class="alkalinearths" id="be" style="border-top-right-radius: 10px;">Be</th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
 		<th class="metalloids" id="b" style="border-top-left-radius: 10px;">B</th>
 		<th class="nonmetals" id="c">C</th>
 		<th class="nonmetals" id="n">N</th>
@@ -101,16 +101,16 @@ HEX: #e3e0cc sand
 		<tr>
 		<th class="alkalimetals" id="na">Na</th>
 		<th class="alkalinearths" id="mg">Mg</th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
-		<th></th>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
 		<th class="basicmetals" id="al">Al</th>
 		<th class="metalloids" id="si">Si</th>
 		<th class="nonmetals" id="p">P</th>
@@ -164,7 +164,11 @@ HEX: #e3e0cc sand
 		<tr>
 		<th class="alkalimetals" id="cs">Cs</th>
 		<th class="alkalinearths" id="ba">Ba</th>
-		<th bgcolor="#BCC8A9"><button onclick="appearLanthanide()"><label>L</label></button></th>
+		<td bgcolor="#BCC8A9" style="padding: 0px">
+			<button id="lanthanidebutton" onclick="appearLanthanide()">
+				<label>Lanthanides</label>
+			</button>
+		</td>
 		<th class="transitionmetals" id="al">Hf</th>
 		<th class="transitionmetals" id="al">Ta</th>
 		<th class="transitionmetals" id="al">W</th>
@@ -185,7 +189,11 @@ HEX: #e3e0cc sand
 		<tr>
 		<th class="alkalimetals" id="fr" style="border-bottom-left-radius: 10px;">Fr</th>
 		<th class="alkalinearths" id="be">Ra</th>
-		<th bgcolor="#E6F1D4"><button onclick="appearActinide()"><label>A</label></button></th>
+		<td bgcolor="#E6F1D4" style="padding: 0px">
+			<button id="actinidebutton" onclick="appearActinide()">
+				<label>Actinides</label>
+			</button>
+		</td>
 		<th class="transitionmetals" id="al">Rf</th>
 		<th class="transitionmetals" id="al">Db</th>
 		<th class="transitionmetals" id="al">Sg</th>
