--- a/index.html
+++ b/index.html
@@ -57,24 +57,44 @@ HEX: #e3e0cc sand
 	<br><br><br>
 	<center>
 		<table cellspacing="0px" cellpadding="25px" width="90%">
+			<tr>
+				<td>1A</td>
+				<td></td>
+				<td></td>
+				<td class="alkalimetals"></td>
+				<td>Alkali<br>Metals</td>
+				<td class="metalloids"></td>
+				<td>Semi-<br>metals</td>
+				<td class="basicmetals"></td>
+				<td>Basic Metals</td>
+				<td class="noblegases"></td>
+				<td>Noble Gases</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td>8A</td>
+			</tr>
 		<!-- FIRST PERIOD -->
 		<th class="nonmetals" id="h" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">H</th>
+		<td> 2A </td>
 		<td></td>
+		<td class="alkalinearths"></td>
+		<td>Alkaline Earth</td>
+		<td class="transitionmetals"></td>
+		<td>Transition Metals</td>
+		<td class="nonmetals"></td>
+		<td>Non-<br>metals</td>
+		<td class="halogens"></td>
+		<td>Halogens</td>
 		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
+		<td>3A</td>
+		<td>4A</td>
+		<td>5A</td>
+		<td>6A</td>
+		<td>7A</td>
 		<th class="noblegases" id="he" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">He</th>
 		<!-- SECOND PERIOD -->
 		<tr>
@@ -101,16 +121,16 @@ HEX: #e3e0cc sand
 		<tr>
 		<th class="alkalimetals" id="na">Na</th>
 		<th class="alkalinearths" id="mg">Mg</th>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
+		<td>3B</td>
+		<td>4B</td>
+		<td>5B</td>
+		<td>6B</td>
+		<td>7B</td>
+		<td>8B</td>
+		<td>8B</td>
+		<td>8B</td>
+		<td>1B</td>
+		<td>2B</td>
 		<th class="basicmetals" id="al">Al</th>
 		<th class="metalloids" id="si">Si</th>
 		<th class="nonmetals" id="p">P</th>
