color legend border radius

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@ HEX: #e3e0cc sand
 				<td>1A</td>
 				<td></td>
 				<td></td>
-				<td class="alkalimetals"></td>
+				<td class="alkalimetals" style="border-top-left-radius: 10px; border-top-right-radius: 10px;"></td>
 				<td>Alkali<br>Metals</td>
-				<td class="metalloids"></td>
+				<td class="metalloids" style="border-top-left-radius: 10px; border-top-right-radius: 10px;"></td>
 				<td>Semi-<br>metals</td>
-				<td class="basicmetals"></td>
+				<td class="basicmetals" style="border-top-left-radius: 10px; border-top-right-radius: 10px;"></td>
 				<td>Basic Metals</td>
-				<td class="noblegases"></td>
+				<td class="noblegases" style="border-top-left-radius: 10px; border-top-right-radius: 10px;"></td>
 				<td>Noble Gases</td>
 				<td></td>
 				<td></td>
@@ -81,13 +81,13 @@ HEX: #e3e0cc sand
 		<th class="nonmetals" id="h" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">H</th>
 		<td> 2A </td>
 		<td></td>
-		<td class="alkalinearths"></td>
+		<td class="alkalinearths" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;"></td>
 		<td>Alkaline Earth</td>
-		<td class="transitionmetals"></td>
+		<td class="transitionmetals" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;"></td>
 		<td>Transition Metals</td>
-		<td class="nonmetals"></td>
+		<td class="nonmetals" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;"></td>
 		<td>Non-<br>metals</td>
-		<td class="halogens"></td>
+		<td class="halogens" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;"></td>
 		<td>Halogens</td>
 		<td></td>
 		<td>3A</td>
