atomic mass update

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ HEX: #e3e0cc sand
 	<br><br><br>
 	<center>
 		<table cellspacing="0px" cellpadding="25px" width="90%">
+		<!-- HEADING -->
 			<tr>
 				<td>1A</td>
 				<td></td>
@@ -78,194 +79,320 @@ HEX: #e3e0cc sand
 				<td>8A</td>
 			</tr>
 		<!-- FIRST PERIOD -->
-		<th class="nonmetals" id="h" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">H</th>
-		<td> 2A </td>
-		<td></td>
-		<td class="alkalinearths" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;"></td>
-		<td>Alkaline Earth</td>
-		<td class="transitionmetals" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;"></td>
-		<td>Transition Metals</td>
-		<td class="nonmetals" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;"></td>
-		<td>Non-<br>metals</td>
-		<td class="halogens" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;"></td>
-		<td>Halogens</td>
-		<td></td>
-		<td>3A</td>
-		<td>4A</td>
-		<td>5A</td>
-		<td>6A</td>
-		<td>7A</td>
-		<th class="noblegases" id="he" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">He</th>
+			<tr>
+				<th class="nonmetals" id="h" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">H<br>
+					<p id="atomicmass">1.008</p>
+				</th>
+				<td> 2A </td>
+				<td></td>
+				<td class="alkalinearths" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;"></td>
+				<td>Alkaline Earth</td>
+				<td class="transitionmetals" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;"></td>
+				<td>Transition Metals</td>
+				<td class="nonmetals" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;"></td>
+				<td>Non-<br>metals</td>
+				<td class="halogens" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;"></td>
+				<td>Halogens</td>
+				<td></td>
+				<td>3A</td>
+				<td>4A</td>
+				<td>5A</td>
+				<td>6A</td>
+				<td>7A</td>
+				<th class="noblegases" id="he" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">He<br>
+					<p id="atomicmass">4.003</p>
+				</th>
+			</tr>
 		<!-- SECOND PERIOD -->
-		<tr>
-		<th class="alkalimetals" id="li">Li</th>
-		<th class="alkalinearths" id="be" style="border-top-right-radius: 10px;">Be</th>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<th class="metalloids" id="b" style="border-top-left-radius: 10px;">B</th>
-		<th class="nonmetals" id="c">C</th>
-		<th class="nonmetals" id="n">N</th>
-		<th class="nonmetals" id="o">O</th>
-		<th class="halogens" id="f">F</th>
-		<th class="noblegases" id="ne">Ne</th>
-		</tr>
+			<tr>
+				<th class="alkalimetals" id="li">Li<br>
+					<p id="atomicmass">6.941</p></th>
+				<th class="alkalinearths" id="be" style="border-top-right-radius: 10px;">Be<br>
+					<p id="atomicmass">9.012</p></th>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<th class="metalloids" id="b" style="border-top-left-radius: 10px;">B<br>
+					<p id="atomicmass">10.81</p></th>
+				<th class="nonmetals" id="c">C<br>
+					<p id="atomicmass">12.011</p></th>
+				<th class="nonmetals" id="n">N<br>
+					<p id="atomicmass">14.007</p></th>
+				<th class="nonmetals" id="o">O<br>
+					<p id="atomicmass">15.999</p></th>
+				<th class="halogens" id="f">F<br>
+					<p id="atomicmass">18.998</p></th>
+				<th class="noblegases" id="ne">Ne<br>
+					<p id="atomicmass">20.180</p></th>
+			</tr>
 		<!-- THIRD PERIOD -->
-		<tr>
-		<th class="alkalimetals" id="na">Na</th>
-		<th class="alkalinearths" id="mg">Mg</th>
-		<td>3B</td>
-		<td>4B</td>
-		<td>5B</td>
-		<td>6B</td>
-		<td>7B</td>
-		<td>8B</td>
-		<td>8B</td>
-		<td>8B</td>
-		<td>1B</td>
-		<td>2B</td>
-		<th class="basicmetals" id="al">Al</th>
-		<th class="metalloids" id="si">Si</th>
-		<th class="nonmetals" id="p">P</th>
-		<th class="nonmetals" id="s">S</th>
-		<th class="halogens" id="cl">Cl</th>
-		<th class="noblegases" id="ar">Ar</th>
-		</tr>
+			<tr>
+				<th class="alkalimetals" id="na">Na<br>
+					<p id="atomicmass">22.990</p></th>
+				<th class="alkalinearths" id="mg">Mg<br>
+					<p id="atomicmass">24.305</p></th>
+				<td>3B</td>
+				<td>4B</td>
+				<td>5B</td>
+				<td>6B</td>
+				<td>7B</td>
+				<td>8B</td>
+				<td>8B</td>
+				<td>8B</td>
+				<td>1B</td>
+				<td>2B</td>
+				<th class="basicmetals" id="al">Al<br>
+					<p id="atomicmass">26.982</p></th>
+				<th class="metalloids" id="si">Si<br>
+					<p id="atomicmass">28.086</p></th>
+				<th class="nonmetals" id="p">P<br>
+					<p id="atomicmass">30.974</p></th>
+				<th class="nonmetals" id="s">S<br>
+					<p id="atomicmass">32.066</p></th>
+				<th class="halogens" id="cl">Cl<br>
+					<p id="atomicmass">35.453</p></th>
+				<th class="noblegases" id="ar">Ar<br>
+					<p id="atomicmass">39.948</p></th>
+			</tr>
 		<!-- FOURTH PERIOD -->
-		<tr>
-		<th class="alkalimetals" id="k">K</th>
-		<th class="alkalinearths" id="ca">Ca</th>
-		<th class="transitionmetals" id="al">Sc</th>
-		<th class="transitionmetals" id="al">Ti</th>
-		<th class="transitionmetals" id="al">V</th>
-		<th class="transitionmetals" id="al">Cr</th>
-		<th class="transitionmetals" id="al">Mn</th>
-		<th class="transitionmetals" id="al">Fe</th>
-		<th class="transitionmetals" id="al">Co</th>
-		<th class="transitionmetals" id="al">Ni</th>
-		<th class="transitionmetals" id="al">Cu</th>
-		<th class="transitionmetals" id="al">Zn</th>
-		<th class="basicmetals" id="al">Ga</th>
-		<th class="metalloids" id="ge">Ge</th>
-		<th class="metalloids" id="as">As</th>
-		<th class="nonmetals" id="se">Se</th>
-		<th class="halogens" id="br">Br</th>
-		<th class="noblegases" id="kr">Kr</th>
-		</tr>
+			<tr>
+				<th class="alkalimetals" id="k">K<br>
+					<p id="atomicmass">39.098</p></th>
+				<th class="alkalinearths" id="ca">Ca<br>
+					<p id="atomicmass">40.078</p></th>
+				<th class="transitionmetals" id="al">Sc<br>
+					<p id="atomicmass">44.956</p></th>
+				<th class="transitionmetals" id="al">Ti<br>
+					<p id="atomicmass">47.867</p></th>
+				<th class="transitionmetals" id="al">V<br>
+					<p id="atomicmass">50.942</p></th>
+				<th class="transitionmetals" id="al">Cr<br>
+					<p id="atomicmass">51.996</p></th>
+				<th class="transitionmetals" id="al">Mn<br>
+					<p id="atomicmass">54.938</p></th>
+				<th class="transitionmetals" id="al">Fe<br>
+					<p id="atomicmass">55.845</p></th>
+				<th class="transitionmetals" id="al">Co<br>
+					<p id="atomicmass">58.933</p></th>
+				<th class="transitionmetals" id="al">Ni<br>
+					<p id="atomicmass">58.693</p></th>
+				<th class="transitionmetals" id="al">Cu<br>
+					<p id="atomicmass">63.546</p></th>
+				<th class="transitionmetals" id="al">Zn<br>
+					<p id="atomicmass">65.38</p></th>
+				<th class="basicmetals" id="al">Ga<br>
+					<p id="atomicmass">69.723</p></th>
+				<th class="metalloids" id="ge">Ge<br>
+					<p id="atomicmass">72.631</p></th>
+				<th class="metalloids" id="as">As<br>
+					<p id="atomicmass">74.922</p></th>
+				<th class="nonmetals" id="se">Se<br>
+					<p id="atomicmass">78.872</p></th>
+				<th class="halogens" id="br">Br<br>
+					<p id="atomicmass">79.904</p></th>
+				<th class="noblegases" id="kr">Kr<br>
+					<p id="atomicmass">84.798</p></th>
+			</tr>
 		<!-- FIFTH PERIOD -->
-		<tr>
-		<th class="alkalimetals" id="rb">Rb</th>
-		<th class="alkalinearths" id="sr">Sr</th>
-		<th class="transitionmetals" id="al">Y</th>
-		<th class="transitionmetals" id="al">Zr</th>
-		<th class="transitionmetals" id="al">Nb</th>
-		<th class="transitionmetals" id="al">Mo</th>
-		<th class="transitionmetals" id="al">Tc</th>
-		<th class="transitionmetals" id="al">Ru</th>
-		<th class="transitionmetals" id="al">Rh</th>
-		<th class="transitionmetals" id="al">Pd</th>
-		<th class="transitionmetals" id="al">Ag</th>
-		<th class="transitionmetals" id="al">Cd</th>
-		<th class="basicmetals" id="al">In</th>
-		<th class="basicmetals" id="al">Sn</th>
-		<th class="metalloids" id="sb">Sb</th>
-		<th class="metalloids" id="te">Te</th>
-		<th class="halogens" id="i">I</th>
-		<th class="noblegases" id="xe">Xe</th>
-		</tr>
+			<tr>
+				<th class="alkalimetals" id="rb">Rb<br>
+					<p id="atomicmass">85.468</p></th>
+				<th class="alkalinearths" id="sr">Sr<br>
+					<p id="atomicmass">87.62</p></th>
+				<th class="transitionmetals" id="al">Y<br>
+					<p id="atomicmass">88.906</p></th>
+				<th class="transitionmetals" id="al">Zr<br>
+					<p id="atomicmass">91.224</p></th>
+				<th class="transitionmetals" id="al">Nb<br>
+					<p id="atomicmass">92.906</p></th>
+				<th class="transitionmetals" id="al">Mo<br>
+					<p id="atomicmass">95.95</p></th>
+				<th class="transitionmetals" id="al">Tc<br>
+					<p id="atomicmass">98.907</p></th>
+				<th class="transitionmetals" id="al">Ru<br>
+					<p id="atomicmass">101.07</p></th>
+				<th class="transitionmetals" id="al">Rh<br>
+					<p id="atomicmass">102.906</p></th>
+				<th class="transitionmetals" id="al">Pd<br>
+					<p id="atomicmass">106.42</p></th>
+				<th class="transitionmetals" id="al">Ag<br>
+					<p id="atomicmass">107.868</p></th>
+				<th class="transitionmetals" id="al">Cd<br>
+					<p id="atomicmass">112.411</p></th>
+				<th class="basicmetals" id="al">In<br>
+					<p id="atomicmass">114.818</p></th>
+				<th class="basicmetals" id="al">Sn<br>
+					<p id="atomicmass">118.711</p></th>
+				<th class="metalloids" id="sb">Sb<br>
+					<p id="atomicmass">121.760</p></th>
+				<th class="metalloids" id="te">Te<br>
+					<p id="atomicmass">127.6</p></th>
+				<th class="halogens" id="i">I<br>
+					<p id="atomicmass">126.904</p></th>
+				<th class="noblegases" id="xe">Xe<br>
+					<p id="atomicmass">131.294</p></th>
+			</tr>
 		<!-- SIXTH PERIOD -->
-		<tr>
-		<th class="alkalimetals" id="cs">Cs</th>
-		<th class="alkalinearths" id="ba">Ba</th>
-		<td bgcolor="#BCC8A9" style="padding: 0px">
-			<button id="lanthanidebutton" onclick="appearLanthanide()">
-				<label>Lanthanides</label>
-			</button>
-		</td>
-		<th class="transitionmetals" id="al">Hf</th>
-		<th class="transitionmetals" id="al">Ta</th>
-		<th class="transitionmetals" id="al">W</th>
-		<th class="transitionmetals" id="al">Re</th>
-		<th class="transitionmetals" id="al">Os</th>
-		<th class="transitionmetals" id="al">Ir</th>
-		<th class="transitionmetals" id="al">Pt</th>
-		<th class="transitionmetals" id="al">Au</th>
-		<th class="transitionmetals" id="al">Hg</th>
-		<th class="basicmetals" id="al">Tl</th>
-		<th class="basicmetals" id="al">Pb</th>
-		<th class="basicmetals" id="al">Bi</th>
-		<th class="metalloids" id="po">Po</th>
-		<th class="halogens" id="at">At</th>
-		<th class="noblegases" id="rn">Rn</th>
-		</tr>
+			<tr>
+				<th class="alkalimetals" id="cs">Cs<br>
+					<p id="atomicmass">132.905</p></th>
+				<th class="alkalinearths" id="ba">Ba<br>
+					<p id="atomicmass">137.328</p></th>
+				<td bgcolor="#BCC8A9" style="padding: 0px">
+					<button id="lanthanidebutton" onclick="appearLanthanide()">
+						<label>Lanthanides</label>
+					</button>
+				</td>
+				<th class="transitionmetals" id="al">Hf<br>
+					<p id="atomicmass">178.49</p></th>
+				<th class="transitionmetals" id="al">Ta<br>
+					<p id="atomicmass">180.948</p></th>
+				<th class="transitionmetals" id="al">W<br>
+					<p id="atomicmass">183.84</p></th>
+				<th class="transitionmetals" id="al">Re<br>
+					<p id="atomicmass">186.207</p></th>
+				<th class="transitionmetals" id="al">Os<br>
+					<p id="atomicmass">190.23</th>
+				<th class="transitionmetals" id="al">Ir<br>
+					<p id="atomicmass">192.217</p></th>
+				<th class="transitionmetals" id="al">Pt<br>
+					<p id="atomicmass">195.085</p></th>
+				<th class="transitionmetals" id="al">Au<br>
+					<p id="atomicmass">196.967</p></th>
+				<th class="transitionmetals" id="al">Hg<br>
+					<p id="atomicmass">200.592</p></th>
+				<th class="basicmetals" id="al">Tl<br>
+					<p id="atomicmass">204.383</p></th>
+				<th class="basicmetals" id="al">Pb<br>
+					<p id="atomicmass">207.2</p></th>
+				<th class="basicmetals" id="al">Bi<br>
+					<p id="atomicmass">208.980</p></th>
+				<th class="metalloids" id="po">Po<br>
+					<p id="atomicmass">208.982</p></th>
+				<th class="halogens" id="at">At<br>
+					<p id="atomicmass">209.987</p></th>
+				<th class="noblegases" id="rn">Rn<br>
+					<p id="atomicmass">222.018</p></th>
+			</tr>
 		<!-- SEVENTH PERIOD -->
-		<tr>
-		<th class="alkalimetals" id="fr" style="border-bottom-left-radius: 10px;">Fr</th>
-		<th class="alkalinearths" id="be">Ra</th>
-		<td bgcolor="#E6F1D4" style="padding: 0px">
-			<button id="actinidebutton" onclick="appearActinide()">
-				<label>Actinides</label>
-			</button>
-		</td>
-		<th class="transitionmetals" id="al">Rf</th>
-		<th class="transitionmetals" id="al">Db</th>
-		<th class="transitionmetals" id="al">Sg</th>
-		<th class="transitionmetals" id="al">Bh</th>
-		<th class="transitionmetals" id="al">Hs</th>
-		<th class="transitionmetals" id="al">Mt</th>
-		<th class="transitionmetals" id="al">Ds</th>
-		<th class="transitionmetals" id="al">Rg</th>
-		<th class="transitionmetals" id="al">Cn</th>
-		<th class="basicmetals" id="al">Uut</th>
-		<th class="basicmetals" id="al">Fl</th>
-		<th class="basicmetals" id="al">Uup</th>
-		<th class="basicmetals" id="al">Lv</th>
-		<th class="halogens" id="uus">Uus</th>
-		<th class="noblegases" id="uuo" style="border-bottom-right-radius: 10px;">Uuo</th>
-		</tr>
-	</table>
+			<tr>
+				<th class="alkalimetals" id="fr" style="border-bottom-left-radius: 10px;">Fr<br>
+					<p id="atomicmass">223.020</p></th>
+				<th class="alkalinearths" id="be">Ra<br>
+					<p id="atomicmass">226.025</p></th>
+				<td bgcolor="#E6F1D4" style="padding: 0px">
+					<button id="actinidebutton" onclick="appearActinide()">
+						<label>Actinides</label>
+					</button>
+				</td>
+				<th class="transitionmetals" id="al">Rf<br>
+					<p id="atomicmass">261</p></th>
+				<th class="transitionmetals" id="al">Db<br>
+					<p id="atomicmass">262</p></th>
+				<th class="transitionmetals" id="al">Sg<br>
+					<p id="atomicmass">266</p></th>
+				<th class="transitionmetals" id="al">Bh<br>
+					<p id="atomicmass">264</p></th>
+				<th class="transitionmetals" id="al">Hs<br>
+					<p id="atomicmass">269</p></th>
+				<th class="transitionmetals" id="al">Mt<br>
+					<p id="atomicmass">268</p></th>
+				<th class="transitionmetals" id="al">Ds<br>
+					<p id="atomicmass">169</p></th>
+				<th class="transitionmetals" id="al">Rg<br>
+					<p id="atomicmass">272</p></th>
+				<th class="transitionmetals" id="al">Cn<br>
+					<p id="atomicmass">277</p></th>
+				<th class="basicmetals" id="al">Uut<br>
+					<p id="atomicmass">unknown</p></th>
+				<th class="basicmetals" id="al">Fl<br>
+					<p id="atomicmass">289</p></th>
+				<th class="basicmetals" id="al">Uup<br>
+					<p id="atomicmass">unknown</p></th>
+				<th class="basicmetals" id="al">Lv<br>
+					<p id="atomicmass">298</p></th>
+				<th class="halogens" id="uus">Uus<br>
+					<p id="atomicmass">unknown</p></th>
+				<th class="noblegases" id="uuo" style="border-bottom-right-radius: 10px;">Uuo<br>
+					<p id="atomicmass">unknown</p></th>
+				</tr>
+		</table>
 		<!-- LANTHANIDES AND ACTINIDES -->
-		<div id="lanthanide"><table class="lanthanides" border="0px" cellspacing="0px" cellpadding="20px" width="65%">
-			<th id="la">La</th>
-			<th id="ce">Ce</th>
-			<th id="pr">Pr</th>
-			<th id="nd">Nd</th>
-			<th id="pm">Pm</th>
-			<th id="sm">Sm</th>
-			<th id="eu">Eu</th>
-			<th id="gd">Gd</th>
-			<th id="tb">Tb</th>
-			<th id="dy">Dy</th>
-			<th id="ho">Ho</th>
-			<th id="er">Er</th>
-			<th id="tm">Tm</th>
-			<th id="yb">Yb</th>
-			<th id="lu">Lu</th>
-		</table></div>
-		<div id="actinide"><table class="actinides" border="0px" cellspacing="0px" cellpadding="20px" width="65%">
-			<th>Ac</th>
-			<th>Th</th>
-			<th>Pa</th>
-			<th>U</th>
-			<th>Np</th>
-			<th>Pu</th>
-			<th>Am</th>
-			<th>Cm</th>
-			<th>Bk</th>
-			<th>Cf</th>
-			<th>Es</th>
-			<th>Fm</th>
-			<th>Md</th>
-			<th>No</th>
-			<th>Lr</th>
-		</table></div>
+		<div id="lanthanide">
+			<table class="lanthanides" border="0px" cellspacing="0px" cellpadding="20px" width="65%">
+				<th id="la">La<br>
+					<p id="atomicmass">138.905</p></th>
+				<th id="ce">Ce<br>
+					<p id="atomicmass">140.116</p></th>
+				<th id="pr">Pr<br>
+					<p id="atomicmass">140.908</p></th>
+				<th id="nd">Nd<br>
+					<p id="atomicmass">144.242</p></th>
+				<th id="pm">Pm<br>
+					<p id="atomicmass">144.913</p></th>
+				<th id="sm">Sm<br>
+					<p id="atomicmass">150.36</p></th>
+				<th id="eu">Eu<br>
+					<p id="atomicmass">151.964</p></th>
+				<th id="gd">Gd<br>
+					<p id="atomicmass">157.25</p></th>
+				<th id="tb">Tb<br>
+					<p id="atomicmass">158.925</p></th>
+				<th id="dy">Dy<br>
+					<p id="atomicmass">162.500</p></th>
+				<th id="ho">Ho<br>
+					<p id="atomicmass">164.930</p></th>
+				<th id="er">Er<br>
+					<p id="atomicmass">167.259</p></th>
+				<th id="tm">Tm<br>
+					<p id="atomicmass">168.934</p></th>
+				<th id="yb">Yb<br>
+					<p id="atomicmass">173.055</p></th>
+				<th id="lu">Lu<br>
+					<p id="atomicmass">174.967</p></th>
+			</table>
+		</div>
+		<div id="actinide">
+			<table class="actinides" border="0px" cellspacing="0px" cellpadding="20px" width="65%">
+				<th id="Ac">Ac <br>
+					<p id="atomicmass">227.028</p></th>
+				<th id="Th">Th<br>
+					<p id="atomicmass">232.038</p></th>
+				<th id="Pa">Pa<br>
+					<p id="atomicmass">231.036</p></th>
+				<th id="U">U<br>
+					<p id="atomicmass">238.029</p></th>
+				<th id="Np">Np<br>
+					<p id="atomicmass">237.048</p></th>
+				<th id="Pu">Pu<br>
+					<p id="atomicmass">244.064</p></th>
+				<th id="Am">Am<br>
+					<p id="atomicmass">243.061</p></th>
+				<th id="Cm">Cm<br>
+					<p id="atomicmass">247.070</p></th>
+				<th id="Bk">Bk<br>
+					<p id="atomicmass">247.070</p></th>
+				<th id="Cf">Cf<br>
+					<p id="atomicmass">251.080</p></th>
+				<th id="Es">Es<br>
+					<p id="atomicmass">254</p></th>
+				<th id="Fm">Fm<br>
+					<p id="atomicmass">257.095</p></th>
+				<th id="Md">Md<br>
+					<p id="atomicmass">258.1</p></th>
+				<th id="No">No<br>
+					<p id="atomicmass">259.101</p></th>
+				<th id="Lr">Lr<br>
+					<p id="atomicmass">262</p></th>
+			</table>
+		</div>
 	</center><br>
 	<div>
 		<center>
