--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ HEX: #e3e0cc sand
 		<!-- LANTHANIDES AND ACTINIDES -->
 		<div id="lanthanide">
 			<table class="lanthanides" border="0px" cellspacing="0px" cellpadding="20px" width="65%">
-				<th id="la">
+				<th id="la" style="border-bottom-left-radius: 10px; border-top-left-radius: 10px;">
 					<p id="atomicnum">57</p>La<br>
 					<p id="atomicmass">138.905</p></th>
 				<th id="ce">
@@ -459,14 +459,14 @@ HEX: #e3e0cc sand
 				<th id="yb">
 					<p id="atomicnum">70</p>Yb<br>
 					<p id="atomicmass">173.055</p></th>
-				<th id="lu">
+				<th id="lu" style="border-bottom-right-radius: 10px; border-top-right-radius: 10px;">
 					<p id="atomicnum">71</p>Lu<br>
 					<p id="atomicmass">174.967</p></th>
 			</table>
 		</div>
 		<div id="actinide">
 			<table class="actinides" border="0px" cellspacing="0px" cellpadding="20px" width="65%">
-				<th id="Ac">
+				<th id="Ac" style="border-bottom-left-radius: 10px; border-top-left-radius: 10px;">
 					<p id="atomicnum">89</p>Ac <br>
 					<p id="atomicmass">227.028</p></th>
 				<th id="Th">
@@ -508,7 +508,7 @@ HEX: #e3e0cc sand
 				<th id="No">
 					<p id="atomicnum">102</p>No<br>
 					<p id="atomicmass">259.101</p></th>
-				<th id="Lr">
+				<th id="Lr" style="border-bottom-right-radius: 10px; border-top-right-radius: 10px;">
 					<p id="atomicnum">103</p>Lr<br>
 					<p id="atomicmass">[262]</p></th>
 			</table>
