code readability enhancement

--- a/genchem.html
+++ b/genchem.html
@@ -95,6 +95,24 @@ HEX: #e3e0cc sand
 			<h3>Step three:</h3><p>Divide the actual yield by the theoretical yield, then multiply by 100%. The answer is the percent yield of the reaction</p>
 		</div>
 	</div>
+	<div class="back row">
+		<div class="column">
+			<h2 id="empirical">Empirical Formula</h2>
+			<h3>Step one:</h3><p> Convert percent composition to grams.</p>
+			<h3>Step two:</h3><p> Multiply the quantities of the elements (in grams)<br> by their molar masses (in moles per grams).</p>
+			<h3>Step three:</h3><p> Divide the products (in moles) by the smallest molar mass. </p>
+			<h3>Step four:</h3><p> Round the products (in moles) to the nearest whole number. </p>
+			<h3>Step five:</h3><p> Substitute the whole number as the subscript of each element. </p>
+			<h3>Step six:</h3><p>Write the elements beside each other, and you're done!<p>
+		</div>
+		<div class="column">
+			<h2 id="molecular">Molecular Formula</h2>
+			<h3>Step one:</h3><p>Multiply the subscript of the elements by their molar masses.</p>
+			<h3>Step two:</h3><p>Add the products.</p>
+			<h3>Step three:</h3><p> Divide the molar mass of the compound by the sum of the products. </p>
+			<h3>Step four:</h3><p>Multiply the subscript of the elements by the quotient, and you're done!</p>
+		</div>
+	</div>
 <br>
 	<center>
 		<footer>
