--- a/index.html
+++ b/index.html
@@ -22,40 +22,32 @@
 			}
 		}
 	</script>
-	<!-- 
-HEX: #f0f0f0 grayish white
-
-HEX: #c5d5c5 mint green
-
-HEX: #9fa9a3 pale olive
-
-HEX: #e3e0cc sand
- -->
 </head>
 <body>
-	<nav>
-		<a class="active" href="index.html">Home</a>
-		<a href="directory.html">Directory</a>
-		<a href="introchem.html">Introductory Chemistry</a>
-		<a href="genchem.html">General Chemistry</a>
-		<a href="ochem.html">Organic Chemistry</a>
-		<a href="inochem.html">Inorganic Chemistry</a>
-		<a href="achem.html">Analytical Chemistry</a>
-		<a href="biochem.html">Biochemistry</a>
-		<a href="resources.html">Resources</a>
-	</nav>
+	<header>
+		<nav>
+			<a class="active" href="index.html">Home</a>
+			<a href="introchem.html">Introductory Chemistry</a>
+			<a href="genchem.html">General Chemistry</a>
+			<a href="ochem.html">Organic Chemistry</a>
+			<a href="inochem.html">Inorganic Chemistry</a>
+			<a href="achem.html">Analytical Chemistry</a>
+			<a href="biochem.html">Biochemistry</a>
+			<a href="resources.html">Resources</a>
+			<input type="text" placeholder="Search..">
+		</nav>
 
-	<div id="sociallinksdiv">
-		<a href="index.html"><img id="logo" src="logos/logo.png"></a>
-		<a href="index.html"><h1 id="chemistry">CHEMISTRY</h1></a>
-		<h4 id="devname">Made by <a href="https://github.com/giannacrisha" id="devlink">GIANNA</a></h4><br>
-		<h4 id="socmed">
-			<a id="twitter" href="https://twitter.com/devilainess"><img src="logos/twitter.png"></a>
-			<a id="github" href="https://github.com/giannacrisha"><img src="logos/github.png"></a>
-			<a id="fb" href="https://facebook.com/giannacrisha"><img src="logos/fb.png"></a>
-		</h4>
-	</div>
-
+		<div id="sociallinksdiv">
+			<a href="index.html"><img id="logo" src="logos/logo.png"></a>
+			<a href="index.html"><h1 id="chemistry">CHEMISTRY</h1></a>
+			<h4 id="devname">Made by <a href="https://github.com/giannacrisha" id="devlink">GIANNA</a></h4><br>
+			<h4 id="socmed">
+				<a id="twitter" href="https://twitter.com/devilainess"><img src="logos/twitter.png"></a>
+				<a id="github" href="https://github.com/giannacrisha"><img src="logos/github.png"></a>
+				<a id="fb" href="https://facebook.com/giannacrisha"><img src="logos/fb.png"></a>
+			</h4>
+		</div>
+	</header>
 	<main>
 		<div id="larrow">
 			<div id="larrowhead"></div>
