--- a/genchem.html
+++ b/genchem.html
@@ -16,9 +16,9 @@ HEX: #e3e0cc sand
 <body>
 	<header>
 		<nav>
-			<a class="active" href="index.html">Home</a>
+			<a href="index.html">Home</a>
 			<a href="introchem.html">Introductory Chemistry</a>
-			<a href="genchem.html">General Chemistry</a>
+			<a class="active" href="genchem.html">General Chemistry</a>
 			<a href="ochem.html">Organic Chemistry</a>
 			<a href="inochem.html">Inorganic Chemistry</a>
 			<a href="achem.html">Analytical Chemistry</a>
